--- a/TT2019-B003.tex
+++ b/TT2019-B003.tex
@@ -41,7 +41,7 @@
 		\end{large}
 		\begin{large}
 			Directores:\\
-			Moreno Cervantes Axel Ernesto
+			Moreno Cervantes Axel Ernesto\\
 			Díaz Sandra\\
 		\end{large}
 		\end{center}
