agregue un nombre
que estaba faltando

--- a/TT2019-B003.tex
+++ b/TT2019-B003.tex
@@ -42,7 +42,7 @@
 		\begin{large}
 			Directores:\\
 			Moreno Cervantes Axel Ernesto\\
-			Díaz Sandra\\
+			Díaz Santiago Sandra\\
 		\end{large}
 		\end{center}
 
