--- a/TT2019-B003.tex
+++ b/TT2019-B003.tex
@@ -36,7 +36,7 @@
 				Blancas Pérez Bryan Israel\\
 				Carrillo Fernández Gerardo\\
 				Morales González Diego Arturo\\
-				Paredes Hernández Pedro\\
+				Paredes Hernández Pedro Antonio\\
 			\end{center}
 		\end{large}
 		\begin{large}
