--- a/TT2019-B003.tex
+++ b/TT2019-B003.tex
@@ -10,10 +10,10 @@
 \begin{document}
 	
 	%PORTADA
-	\begin{titlepage}
-		%\vspace*{} Para dejar un cierto espacio entre dos líneas.
+	\begin{titlepage}	
 		
 		\vspace*{-1.5in}
+		
 		\begin{figure}[htb]
 			\begin{center}
 				\includegraphics[width=4cm]{./imagenes/logoipn.png}
@@ -21,73 +21,94 @@
 		\end{figure}
 		
 		\begin{center}
-		\begin{LARGE}
-			\textcolor{guindapoli}{INSTITUTO POLITÉCNICO NACIONAL}\\
-		\end{LARGE}	
-		\vspace*{0.2in}
-		\begin{Large}
-			\textcolor{azulescom}{ESCUELA SUPERIOR DE CÓMPUTO}\\
-		\end{Large}		
-		\vspace*{0.4in}
-		\begin{large}
-			Trabajo Terminal I.\\
-		\end{large}
-		\vspace*{0.2in}
-		\begin{Large}
-			\textbf{Autentificación Mediante Chaffing And Winnowing En El Protocolo HTTP}\\2019-B003\\
-		\end{Large}
-		\vspace*{0.05in}
-		\rule{80mm}{0.1mm}\\
-		\vspace*{0.1in}
-		\begin{large}
-			\begin{center}
-				Integrantes:\\
-				Blancas Pérez Bryan Israel\\
-				Carrillo Fernández Gerardo\\
-				Morales González Diego Arturo\\
-				Paredes Hernández Pedro Antonio\\
-			\end{center}
-		\end{large}
-		\begin{large}
-			Directores:\\
-			Moreno Cervantes Axel Ernesto\\
-			Díaz Santiago Sandra\\
-		\end{large}
+			
+			\begin{LARGE}
+				\textcolor{guindapoli}{INSTITUTO POLITÉCNICO NACIONAL}\\
+			\end{LARGE}	
+			
+			\vspace*{0.2in}
+			
+			\begin{Large}
+				\textcolor{azulescom}{ESCUELA SUPERIOR DE CÓMPUTO}\\
+			\end{Large}		
+			
+			\vspace*{0.4in}
+			
+			\begin{large}
+				Trabajo Terminal I.\\
+			\end{large}
+			
+			\vspace*{0.2in}
+			
+			\begin{Large}
+				\textbf{Autentificación Mediante Chaffing And Winnowing En El Protocolo HTTP}\\
+			\end{Large}
+			
+			\vspace*{0.2in}
+			
+			\begin{large}
+				2018-B003.\\
+			\end{large}
+			
+			\vspace*{0.2in}
+			
+			\rule{80mm}{.1mm}\\
+			\vspace*{0.1in}
+			
+			\begin{large}
+				\begin{center}
+					Integrantes:\\
+					Blancas Pérez Bryan Israel\\
+					Carrillo Fernández Gerardo\\
+					Morales González Diego Arturo\\
+					Paredes Hernández Pedro Antonio\\
+				\end{center}
+			\end{large}
+			
+			\begin{large}
+				Directores:\\
+				Moreno Cervantes Axel Ernesto\\
+				Díaz Santiago Sandra\\
+			\end{large}
+			
 		\end{center}
+	
 	\end{titlepage}
 
 	\begin{appendix}
 		%%Índice
-		\renewcommand*\contentsname{Índice}
+		\renewcommand*\contentsname{{\textcolor{azulescom}{Índice.}}}
 		\tableofcontents
 		\newpage
 		%%índice de figuras
+		\renewcommand*\listfigurename{{\textcolor{azulescom}{Índice de figuras.}}}
 		\listoffigures
 		\newpage
 		%%Índice de tablas
 		\newpage
+		\renewcommand*\listtablename{{\textcolor{azulescom}{Índice de cuadros.}}}
 		\listoftables
 	\end{appendix}
 	\newpage
 	
 
-	\section{Introducción.}
+	\section{\textcolor{azulescom}{Introducción.}}
 		\subsection{Planteamiento del problema.}
 		\subsection{Justificación.}
 		\subsection{Objetivos.}
 		\subsection{Metodología.}
 		\subsection{Estado del Arte.}
 	\newpage
-	\section{Marco Teórico.}
+	\section{\textcolor{azulescom}{Marco Teórico.}}
 		\subsection{Formato a decidir.}
 	\newpage
-	\section{Análisis}
+	\section{\textcolor{azulescom}{Análisis.}}
 		\subsection{Prototipo I.}
 			\subsubsection{Herramientas a usar.}
 			\subsubsection{Estudio de requerimientos.}
 			\subsubsection{Reglas del negocio.}
 	\newpage
-	\section{Desarrollo}
+	\section{\textcolor{azulescom}{Desarrollo.}}
 		\subsection{Prototipo I.}
 			\subsubsection{Diagrama de casos de uso.}
 			\subsubsection{Descripción de casos de uso.}
