Req. Funcionales PI

--- a/TT2019-B003.tex
+++ b/TT2019-B003.tex
@@ -113,7 +113,14 @@
 			\subsubsection{Herramientas a usar.}
 			\subsubsection{Estudio de requerimientos.}
 				\paragraph{Requerimientos Funcionales.\\ \\}
-				\textbf{PI\_RF1.} Mostrar
+				
+				{\setlength{\parindent}{12pt}
+				\textbf{PI\_RF1. Interceptar petición HTTP.} La extensión, debe interceptar la petición HTTP del navegador, en cuanto éste realice una.\\
+
+				\textbf{PI\_RF2. Deshabilitar extensión.} El usuario puede deshabilitar la extensión, para que ésta no vigile su actividad en el navegador.\\
+				
+				\textbf{PI\_RF3. Habilitar Extensión.} El usuario puede habilitar la extensión, para que ésta vigile cuando cuando se haga una petición HTTP.\\
+				}
 			\subsubsection{Reglas del negocio.}
 	\newpage
 	\section{\textcolor{azulescom}{Desarrollo.}}
