Agregué requerimiento de prueba

--- a/TT2019-B003.tex
+++ b/TT2019-B003.tex
@@ -119,7 +119,10 @@
 
 				\textbf{PI\_RF2. Deshabilitar extensión.} El usuario puede deshabilitar la extensión, para que ésta no vigile su actividad en el navegador.\\
 				
-				\textbf{PI\_RF3. Habilitar Extensión.} El usuario puede habilitar la extensión, para que ésta vigile cuando cuando se haga una petición HTTP.\\
+				\textbf{PI\_RF3. Habilitar Extensión.} El usuario puede habilitar la extensión, para que ésta vigile cuando se haga una petición HTTP.\\
+				%%}
+			
+				\textbf{PI\_RF4. Requerimiento de prueba.} El usuario puede habilitar la extensión, para que ésta vigile cuando se haga una petición HTTP.\\
 				}
 			\subsubsection{Reglas del negocio.}
 	\newpage
