--- a/TT2019-B003.tex
+++ b/TT2019-B003.tex
@@ -122,7 +122,7 @@
 				\textbf{PI\_RF3. Habilitar Extensión.} El usuario puede habilitar la extensión, para que ésta vigile cuando se haga una petición HTTP.\\
 				%%}
 			
-				\textbf{PI\_RF4. Requerimiento de prueba.} El usuario puede habilitar la extensión, para que ésta vigile cuando se haga una petición HTTP.\\
+				\textbf{PI\_RF4. Requerimiento de prueba.} El usuario puede habilitar la extensión, para que ésta vigile cuando ciuando cuand cuand cuasnihdvf se haga una petición HTTP.\\
 				}
 			\subsubsection{Reglas del negocio.}
 	\newpage
