--- a/TT2019-B003.tex
+++ b/TT2019-B003.tex
@@ -127,8 +127,7 @@
 =======
 				\textbf{PI\_RF4. Requerimiento de prueba.} El usuario puede habilitar la extensión, para que ésta vigile cuando se haga una petición HTTP.\\
 				
-				\textbf{PI\_RF4. Requerimiento de asñdlkfjasñldkfjasñdklfasñldkfjaslkdjñfs.} El usuario puede habilitar la extensión, para que ésta vigile cuando se haga una petición HTTP.\\
->>>>>>> 51b0cc0fc6ac84139ccbfbe2f304846c14ede913
+				\textbf{PI\_RF4. Requerimiento de prueba.} El usuario puede habilitar la extensión, para que ésta vigile cuando se haga una petición HTTP.\\
 				}
 			\subsubsection{Reglas del negocio.}
 	\newpage
