--- a/TT2019-B003.tex
+++ b/TT2019-B003.tex
@@ -115,11 +115,11 @@
 				\paragraph{Requerimientos Funcionales.\\ \\}
 				
 				{\setlength{\parindent}{12pt}
-				\textbf{PI\_RF1. Interceptar petición HTTP.} La extensión, debe interceptar la petición HTTP del navegador, en cuanto éste realice una.\\
+				\textbf{PI\_RF1. Interceptar petición HTTP.} La extensión deberá interceptar la petición HTTP del navegador, en cuanto el usuario realice alguna a través del navegador.\\
 
-				\textbf{PI\_RF2. Deshabilitar extensión.} El usuario puede deshabilitar la extensión, para que ésta no vigile su actividad en el navegador.\\
+				\textbf{PI\_RF2. Deshabilitar extensión.} El usuario podrá deshabilitar la extensión, para que ésta no vigile su actividad en el navegador.\\
 				
-				\textbf{PI\_RF3. Habilitar Extensión.} El usuario puede habilitar la extensión, para que ésta vigile cuando se haga una petición HTTP.\\
+				\textbf{PI\_RF3. Habilitar Extensión.} El usuario podrá habilitar la extensión, para que ésta vigile constatemente cuando éste realice una petición HTTP.\\
 				}
 			\subsubsection{Reglas del negocio.}
 	\newpage
