Requerimientos No Funcionales

--- a/TT2019-B003.tex
+++ b/TT2019-B003.tex
@@ -129,6 +129,7 @@
 				\textbf{PI\_RNF2. Versión del navegador} La extensión funcionará a partir de la versión 65.0.3325.181.\\
 				
 				\textbf{PI\_RNF3. Tecnologías para la interfaz de usuario} Para el sistema se hará uso de HTML, JavaScript, CSS, JSON.\\
+				\footnote{Checar si es necesario especificar que debe estar habilitado JavaScript y si sería Funcional o No funcional}
 				}
 			\subsubsection{Reglas del negocio.}
 	\newpage
