--- a/TT2019-B003.tex
+++ b/TT2019-B003.tex
@@ -62,7 +62,7 @@
 			\begin{large}
 				\begin{center}
 					Integrantes:\\
-					Blancas Pérez Bryan Israel\\
+					Blancas Pérez Bryan\\
 					Carrillo Fernández Gerardo\\
 					Morales González Diego Arturo\\
 					Paredes Hernández Pedro Antonio\\
@@ -146,7 +146,7 @@
 		\subsection{Prototipo I.}
 			\subsubsection{Diagrama de casos de uso.}
 			\subsubsection{Descripción de casos de uso.}
-			\subsubsection{Diagrama de flujo.}
+			\subsubsection{Diagrama 	de flujo.}
 			\subsubsection{Flujo de datos.}
 			\subsubsection{Diagrama de clases.}
 			\subsubsection{Diagrama de secuencia.}
