Cambie mi nombre

--- a/TT2019-B003.tex
+++ b/TT2019-B003.tex
@@ -63,7 +63,7 @@
 				\begin{center}
 					Integrantes:\\
 					Blancas Pérez Bryan Israel\\
-					Carrillo Fernández Gerardo\\
+					Carrillo Fernández Jerry\\
 					Morales González Diego Arturo\\
 					Paredes Hernández Pedro Antonio\\
 				\end{center}
@@ -111,6 +111,7 @@
 			\subsubsection{Descripción.}
 				En este prototipo se busca la creación de una extensión de Google Chrome, que sea capaz de interceptar una petición HTTP hecha por el navegador.
 			\subsubsection{Herramientas a usar.}
+				
 			\subsubsection{Estudio de requerimientos.}
 				
 				\paragraph{Requerimientos Funcionales.\\ \\}
