--- a/TT2019-B003.tex
+++ b/TT2019-B003.tex
@@ -64,7 +64,7 @@
 					Integrantes:\\
 					Blancas Pérez Bryan Israel\\
 					Carrillo Fernández Gerardo\\
-					Morales González Diego Arturo\\
+					González Diego Arturo\\
 					Paredes Hernández Pedro Antonio\\
 				\end{center}
 			\end{large}
