Cambiar nombre prueba3

--- a/TT2019-B003.tex
+++ b/TT2019-B003.tex
@@ -62,7 +62,7 @@
 			\begin{large}
 				\begin{center}
 					Integrantes:\\
-					Carrillo Fernández Gerardo\\
+					Carrillo Fernández Jerry\\
 					Blancas Pérez Bryan Israel\\
 					Morales González Diego Arturo\\
 					Paredes Hernández Pedro Antonio\\
