Diagrama de casos de uso

--- a/TT2019-B003.tex
+++ b/TT2019-B003.tex
@@ -146,6 +146,14 @@
 	\section{\textcolor{azulescom}{Desarrollo.}}
 		\subsection{Prototipo I.}
 			\subsubsection{Diagrama de casos de uso.}
+			Diagrama de casos de uso general para el prototipo I.
+			\begin{figure}[htb]
+				\begin{center}
+					\label{fig1} 
+					\includegraphics[width=17cm]{./imagenes/UCD_1.jpg}
+					\caption{Diagrama de casos de uso.}
+				\end{center}
+			\end{figure}
 			\subsubsection{Descripción de casos de uso.}
 			\subsubsection{Diagrama de flujo.}
 			\subsubsection{Flujo de datos.}
