--- a/TT2019-B003.tex
+++ b/TT2019-B003.tex
@@ -98,6 +98,7 @@
 
 	\section{\textcolor{azulescom}{Introducción.}}
 		\subsection{Planteamiento del problema.}
+			En la actualidad todos los usuarios de internet necesitan guardar contraseñas para sus distintas cuentas en las diferentes paginas web en las que ingresa. Principalmente en correos electronicos y redes sociales. El robo de estas contraseñas es un problema muy grave para los usuarios ya que corre en riesgo su identidad e informacion importante.
 		\subsection{Justificación.}
 		\subsection{Objetivos.}
 		\subsection{Metodología.}
