--- a/TT2019-B003.tex
+++ b/TT2019-B003.tex
@@ -12,7 +12,7 @@
 \definecolor{azulescom}{RGB}{0, 0, 102}
 
 \begin{document}
-	
+
 	%PORTADA
 	\begin{titlepage}	
 		
@@ -136,7 +136,7 @@
 				
 				}\newpage
 			
-			\subsubsection{Reglas del negocio.\\}
+			\subsubsection{Reglas del negocio.}
 				{\setlength{\parindent}{12pt}
 					
 					\textbf{PI\_RN1. Confidencialidad de la actividad web.} En cuando el cliente lo indique por medio de la IU, la extensión deberá dejar de vigilar la actividad que el usuario realice en el navegador.\\
@@ -146,14 +146,15 @@
 	\section{\textcolor{azulescom}{Desarrollo.}}
 		\subsection{Prototipo I.}
 			\subsubsection{Diagrama de casos de uso.}
-			Diagrama de casos de uso general para el prototipo I.
-			\begin{figure}[htb]
-				\begin{center}
-					\label{fig1} 
-					\includegraphics[width=17cm]{./imagenes/UCD_1.jpg}
-					\caption{Diagrama de casos de uso.}
-				\end{center}
-			\end{figure}
+				Diagrama de casos de uso general para el prototipo I.
+				\begin{figure}[htb]
+					\begin{center}
+						\label{fig1} 
+						\includegraphics[width=17cm]{./imagenes/UCD_1.jpg}
+						\caption{Diagrama de casos de uso.}
+					\end{center}
+				\end{figure}
+				
 			\subsubsection{Descripción de casos de uso.}
 			\subsubsection{Diagrama de flujo.}
 			\subsubsection{Flujo de datos.}
@@ -161,5 +162,5 @@
 			\subsubsection{Diagrama de secuencia.}
 			\subsubsection{Interfaz de usuario.}
 			\subsubsection{Requisitos de diseño.}
-			
+
 \end{document}
