--- a/TT2019-B003.tex
+++ b/TT2019-B003.tex
@@ -100,6 +100,7 @@
 		\subsection{Planteamiento del problema.}
 			En la actualidad todos los usuarios de internet necesitan guardar contraseñas para sus distintas cuentas en las diferentes páginas web en las que ingresa ya que recordarlas es un problema que avanza constantemente. El uso de estas contraseñas son utilizadas principalmente en correos electrónicos y redes sociales por lo que el robo de las mismas puede poner en riesgo la seguridad del usuario, así como también, existe la tediosa tarea de ingresar usuario y contraseña en cada sesion. Las contraseñas son comúnmente utilizadas para el inicio de sesion y existen diferentes métodos de autentificación para dicho inicio como lo son biométricos. En nuestro proyecto nos enfocaremos más en el uso de text password en donde se autentificará el usuario por medio de una extensión de Google Chrome. Con ayuda de esta extensión resolveremos los problemas comentados anteriormente, dando así comodidad y seguridad al usuario que habilite la extensión.    
 		\subsection{Justificación.}
+			Los usuarios deben de guardar las contraseñas en medios fisicos o digitales
 		\subsection{Objetivos.}
 		\subsection{Metodología.}
 		\subsection{Estado del Arte.}
