descripción de casos de uso

--- a/TT2019-B003.tex
+++ b/TT2019-B003.tex
@@ -159,10 +159,15 @@
 				
 				\begin{table}[ht]
 				\begin{center}
-				\begin{tabular}[c]{c|c}
+				\begin{tabular}{ |p{3cm}||p{10cm}|}
 					\hline
-					\multicolumn{2}{c}{\textbf{Caso de uso: PI\_CU1. Interceptar petición.}} \\
-					hola muyndo asjdn & 2 \\
+					\multicolumn{2}{|c|}{\textbf{Caso de uso: PI\_CU1. Interceptar petición.}} \\
+					\hline
+					Country Name     or Area Name & ISO ALPHA 2 Code \\
+					\hline
+					Afghanistan   & AF   \\
+					Aland Islands&   AX  \\
+					Albania &AL\\
 					\hline
 				\end{tabular}
 				\caption[DCU: PI\_CU1]{Descripción CU: PI\_CU1}
