formato tabla de casos de uso

--- a/TT2019-B003.tex
+++ b/TT2019-B003.tex
@@ -5,11 +5,13 @@
 \usepackage{graphicx}
 %%Colores de texto
 \usepackage{xcolor}
+\usepackage{colortbl}
 %%Links
 \usepackage[hidelinks]{hyperref}
 
 \definecolor{guindapoli}{RGB}{102, 0, 51}
 \definecolor{azulescom}{RGB}{0, 0, 102}
+\definecolor{azulclaro}{RGB}{222, 232, 255}
 
 \begin{document}
 
@@ -185,15 +187,37 @@
 				
 				\begin{table}[ht]
 				\begin{center}
-				\begin{tabular}{ |p{3cm}||p{10cm}|}
+				\begin{tabular}{ |p{3.5cm}||p{9.5cm}|}
 					\hline
-					\multicolumn{2}{|c|}{\textbf{Caso de uso: PI\_CU1. Interceptar petición.}} \\
+					\rowcolor{guindapoli}
+					\multicolumn{2}{|c|}{\textbf{\textcolor{white}{Caso de uso: PI\_CU1. Interceptar petición.}}} \\
 					\hline
-					Country Name     or Area Name & ISO ALPHA 2 Code \\
+					\rowcolor{azulclaro}Concepto & Descripción\\
 					\hline
-					Afghanistan   & AF   \\
-					Aland Islands&   AX  \\
-					Albania &AL\\
+					\cellcolor{azulclaro}Actor & 
+					AF\\ 
+					\hline
+					\cellcolor{azulclaro}Propósito &
+					AX\\
+					\hline
+					\cellcolor{azulclaro}Entradas &
+					AL\\
+					\hline
+					\cellcolor{azulclaro}Salidas &
+					AL\\
+					\hline
+					\cellcolor{azulclaro}Pre-condiciones&
+					AL\\
+					\hline
+					\cellcolor{azulclaro}Post-condiciones&
+					AL\\
+					\hline
+					\cellcolor{azulclaro}Reglas del negocio&
+					AL\\
+					\hline
+					\cellcolor{azulclaro}Errores &
+					AL\\
+													
 					\hline
 				\end{tabular}
 				\caption[DCU: PI\_CU1]{Descripción CU: PI\_CU1}
