--- a/TT2019-B003.tex
+++ b/TT2019-B003.tex
@@ -103,15 +103,10 @@
 			En la actualidad todos los usuarios de internet necesitan guardar contraseñas para sus distintas cuentas en las diferentes páginas web en las que ingresa ya que recordarlas es un problema que avanza constantemente. El uso de estas contraseñas son utilizadas principalmente en correos electrónicos y redes sociales por lo que el robo de las mismas puede poner en riesgo la seguridad del usuario, así como también, existe la tediosa tarea de ingresar usuario y contraseña en cada sesion. Las contraseñas son comúnmente utilizadas para el inicio de sesion y existen diferentes métodos de autentificación para dicho inicio como lo son biométricos. En nuestro proyecto nos enfocaremos más en el uso de text password en donde se autentificará el usuario por medio de una extensión de Google Chrome. Con ayuda de esta extensión resolveremos los problemas comentados anteriormente, dando así comodidad y seguridad al usuario que habilite la extensión.
 		\newpage    
 		\subsection{Justificación.}
-
-		\subsection{Objetivos.}
-		
-		\subsection{Objetivos.}
 			Los usuarios deben de guardar las contraseñas en medios fisicos o digitales y perderlos presenta un grave problema de seguridad. La gran mayoria de servicios web han implementado una solución la cual es recordar tu usuario y contraseña para que se pueda automaticamente acceder al servicio. Dicha solucion presenta cierta vulnerabilidad ya que los archivos donde se guarda la información se puede copiar y con ello replicarlo a otra computadora.
 			En la figura 1, se muestra una tabla donde se comparan los diferentes métodos de autentificación basándose en la simplicidad de su aplicación para el usuario (extraída del artículo Comparison of Authentication Methods on Web Resources). Donde: 1 – Bajo desempeño, 2 - Medio desempeño y 3 – Alto desempeño.
-
 			
-			\begin{table}[]
+			\begin{table}[htb]
 				\centering
 				\resizebox{13cm}{!} {
 					\begin{tabular}{l|l|l|l|l|l|l|l|}
@@ -127,9 +122,8 @@
 						\multicolumn{1}{|l|}{Biométricos}                                                      & 3        & 3                                                            & 2        & 3         & 2      & 2       & 1            \\ \hline
 					\end{tabular}
 				}
-			\caption{Comparación de la aplicación en los distintos métodos de autentificación}
+				\caption{Comparación de la aplicación en los distintos métodos de autentificación}
 			\end{table}
-			
 			
 		\subsection{Objetivos.}
 		
