Agregue tabla justificacion

--- a/TT2019-B003.tex
+++ b/TT2019-B003.tex
@@ -125,6 +125,17 @@
 				\caption{Comparación de la aplicación en los distintos métodos de autentificación}
 			\end{table}
 			
+			La tabla anterior concentra las siguientes caracteristicas:
+			
+			\begin{itemize}
+				\item Recordar: Hace referencia a que tan complicado es que un usuario se acuerde de los datos necesarios para la autentificación. 
+				\item Otros dispositivos: El usuario usa una entidad externa para facilitar su autentificación.
+				\item Acciones: Hace referencia a que tantas acciones adicionales se deben de realizar para autentificarse.
+				\item Facilidad: Simplicidad de tecnología.
+				\item Tiempo: Cantidad de recursos temporales que consume el método de autentificación.
+				
+			\end{itemize}
+			
 		\subsection{Objetivos.}
 		
 		\subsection{Metodología.}
