Agregue tabla justificacion

--- a/TT2019-B003.tex
+++ b/TT2019-B003.tex
@@ -133,7 +133,7 @@
 				\item Acciones: Hace referencia a que tantas acciones adicionales se deben de realizar para autentificarse.
 				\item Facilidad: Simplicidad de tecnología.
 				\item Tiempo: Cantidad de recursos temporales que consume el método de autentificación.
-				
+				\item Errores: Posibles errores durante la autentificación. 
 			\end{itemize}
 			
 		\subsection{Objetivos.}
