Agregue tabla justificacion

--- a/TT2019-B003.tex
+++ b/TT2019-B003.tex
@@ -134,6 +134,7 @@
 				\item Facilidad: Simplicidad de tecnología.
 				\item Tiempo: Cantidad de recursos temporales que consume el método de autentificación.
 				\item Errores: Posibles errores durante la autentificación. 
+				\item Recuperación: Denota la dificultad de recuperar la clave de acceso en caso de pérdida.
 			\end{itemize}
 			
 		\subsection{Objetivos.}
