--- a/TT2019-B003.tex
+++ b/TT2019-B003.tex
@@ -104,7 +104,7 @@
 		\newpage    
 		\subsection{Justificación.}
 			Los usuarios deben de guardar las contraseñas en medios fisicos o digitales y perderlos presenta un grave problema de seguridad. La gran mayoria de servicios web han implementado una solución la cual es recordar tu usuario y contraseña para que se pueda automaticamente acceder al servicio. Dicha solucion presenta cierta vulnerabilidad ya que los archivos donde se guarda la información se puede copiar y con ello replicarlo a otra computadora.
-			En la figura 1, se muestra una tabla donde se comparan los diferentes métodos de autentificación basándose en la simplicidad de su aplicación para el usuario (extraída del artículo Comparison of Authentication Methods on Web Resources). Donde: 1 – Bajo desempeño, 2 - Medio desempeño y 3 – Alto desempeño.
+			En el cuadro No.1, se muestra una tabla donde se comparan los diferentes métodos de autentificación basándose en la simplicidad de su aplicación para el usuario (extraída del artículo Comparison of Authentication Methods on Web Resources). Donde: 1 – Bajo desempeño, 2 - Medio desempeño y 3 – Alto desempeño.
 			
 			\begin{table}[htb]
 				\centering
@@ -166,8 +166,8 @@
 			\item Phishing: Hace referencia a programas que se hacen pasar por entidades confiables para interceptar los datos que desean.
 		\end{itemize}
 			
+	\newpage
 		\subsection{Objetivos.}
-		
 		\subsection{Metodología.}
 		\subsection{Estado del Arte.}
 	\newpage
