Agregué unas tablas e info

--- a/TT2019-B003.tex
+++ b/TT2019-B003.tex
@@ -186,22 +186,48 @@
 				
 				En el ambito del hardware utilizaremos los equipos de cómputo con los cuales contamos actualmente los integrantes, donde se especificaran a continuación: 
 				
-				\paragraph 
-				Nombre: Arturo 
-				Marca: Asus
-				Modelo: X550vc
-				Procesador: Intel Core i5
-				Tarjeta de video: Nvidia GForce 720
-				Memoria RAM: 12GB
-				Disco Duro: 1TB
+				\begin{table}[htb]
+					\begin{tabular}{|p{3.5cm}||p{10cm}|}
+						\rowcolor{guindapoli}
+						\multicolumn{2}{|c|}{\textbf{\textcolor{white}{Equipo de hardware utilizado.}}}\\
+						\hline
+						\rowcolor{white}Nombre & Morales González Diego Arturo\\
+						\hline
+						\rowcolor{azulclaro}Marca & Asus\\
+						\hline
+						\rowcolor{white}Modelo & X550VC\\
+						\hline
+						\rowcolor{azulclaro}Procesador & Intel Core i5\\
+						\hline
+						\rowcolor{white}Tarjeta de video & NVidia GForce 720\\
+						\hline
+						\rowcolor{azulclaro}Memoria RAM & 12 GB\\
+						\hline
+						\rowcolor{white}Disco duro & 1TB\\
+					\end{tabular}
+				\end{table}
 				
-				Nombre: Gerardo
-				Marca: HP
-				Modelo: Pavilion G4
-				Procesador: Intel Core i3
-				Tarjeta de video: Tarjeta integrada Intel
-				Memoria RAM: 6GB
-				Disco Duro: 500GB 
+				\begin{table}[htb]
+					\begin{tabular}{|p{3.5cm}||p{10cm}|}
+						\rowcolor{guindapoli}
+						\multicolumn{2}{|c|}{\textbf{\textcolor{white}{Equipo de hardware utilizado.}}}\\
+						\hline
+						\rowcolor{white}Nombre & Carrillo Fernández Gerardo\\
+						\hline
+						\rowcolor{azulclaro}Marca & HP\\
+						\hline
+						\rowcolor{white}Modelo & Pavilion g4\\
+						\hline
+						\rowcolor{azulclaro}Procesador & Intel Core i3\\
+						\hline
+						\rowcolor{white}Tarjeta de video & Intel Sandybridge Mobile\\
+						\hline
+						\rowcolor{azulclaro}Memoria RAM & 6 GB\\
+						\hline
+						\rowcolor{white}Disco duro & 500GB\\
+					\end{tabular}
+				\end{table}
+				
 				
 			
 			\subsubsection{Estudio de requerimientos.}
