--- a/TT2019-B003.tex
+++ b/TT2019-B003.tex
@@ -174,7 +174,7 @@
 		\subsection{Estado del Arte.}
 	\newpage
 	\section{\textcolor{azulescom}{Marco Teórico.}}
-		\subsection{Formato a decidir.}
+		Como sabemos hasta ahora haremos uso de una extensión de Google Chrome, por lo que empecemos explicando que son estas extensiones. Una extensión de Google Chrome es una pequeña aplicación que se instala en el navegador que, en cierta medida, mejora la navegación del usuario. Estas extensiones tienen diferentes funcionalidades, que, como se dijo anteriormente, facilitan al usuario durante su navegacion por la internet. Existen una infinidad de extensiones hoy en día con funcionalidades inimaginables para distintas paginas, redes sociales, media, etc. La instalación de las extensiones es muy fácil gracias a Chrome Web Store. Como sabemos, Chrome Web Store es una tienda en línea de aplicaciones web para el navegador Google Chrome, y la cual es desarrollada y mantenida por Google (La tienda también cuenta temas visuales para el navegador). Esta tienda es mas intuitiva y amigable para cualquier usuario, facilitando la instalción de las extensiones con un simple click.
 	\newpage
 	\section{\textcolor{azulescom}{Análisis.}}
 		\subsection{Prototipo I.}
