--- a/TT2019-B003.tex
+++ b/TT2019-B003.tex
@@ -184,7 +184,7 @@
 				
 				Para el desarrollo de software de este prototipo, ocuparemos las siguientes tecnologías debido a que nos facilitan el desarrollo y nos proporcionan lo necesario para lograr nuestro objetivo para este prototipo: 
 				\paragraph {JavaScript. \\}
-				JavaScript es considerado como el lenguaje de programación de HTML y de la web. Es un lenguaje de programación fácil de usar y muy versátil para el hámbito de la comunicación en redes. 
+				JavaScript es considerado como el lenguaje de programación de HTML y de la web. Es un lenguaje de programación fácil de usar y muy versátil para el hámbito de la comunicación en redes.\cite{refJavaScript} 
 				
 				En el ambito del hardware utilizaremos los equipos de cómputo con los cuales contamos actualmente los integrantes, donde se especificaran a continuación: 
 				
@@ -477,6 +477,10 @@
 			\subsubsection{Diagrama de secuencia.}
 			\subsubsection{Interfaz de usuario.}
 			\subsubsection{Requisitos de diseño.}
-			
+	%Para agregar una cita en el documento se usa \cite{refKey}, por automático los ordena conforme se van agregando
+	\begin{thebibliography}{20}
+		\bibitem{refJavaScript} https://javascript.info/intro \\
+		
+	\end{thebibliography}		
 \end{document}
 
